task-1/vpc.tf
resource "aws_vpc" "upgrad-vpc" {
    cidr_block = var.vpc_cidr
    enable_dns_hostnames = true
    enable_dns_support = true
    tags = {
        Name = "upgrad-vpc"
    }
}
